--- a/templates/header.html
+++ b/templates/header.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/static/css/style.css">
     <title>{{.Name}}</title>
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script type="module" src="https://unpkg.com/x-frame-bypass"></script>
 </head>
 <body>
     <div class="header"></div>
