--- a/templates/sorry.html
+++ b/templates/sorry.html
@@ -1,9 +1,19 @@
 {{template "header"}}
 
-<div class="title center">We are sorry</div>
-<div>
-    
-</form>
-</div>
+<div class="section page header_section">
+        <div class="gradient gradient_red_blue gradient_header_section"></div>
+        <div class="section_container header_section_container flex_container flex_header_container">
+           <div class="text header_text">
+              <h1></h1>
+           </div>
+           <div class="text body_text flex_item flex_header_item">
+              
+              <div class="form-login">
+                 <h2 class="header_quote">Sorry! Wrong Information !</h2>
+              </div>
+           </div>
+        </div>
+     </div>
+     
       
 {{template "footer"}}
