--- a/templates/list-newest.html
+++ b/templates/list-newest.html
@@ -17,7 +17,7 @@
     <div class="gradient gradient_red_blue gradient_header_section"></div>
     <div class="section_container header_section_container flex_container flex_header_container">
         <div id="newest" class="text body_text flex_item flex_header_item" style="padding-bottom:50px;">
-            <h2 class="header_quote" style="margin-top:50px;">Top 10 Newest Android-related questions</h2>
+            <h2 class="header_quote" style="margin-top:50px;">100 Newest Android-related questions</h2>
             <div class="table100 ver1">
                 <table>
                     <tbody>
@@ -36,7 +36,7 @@
                                     {{range .Tags}}
                                     <div class="post-tag">{{.}}</div>
                                     {{end}}
-                                    <div class="post-time">post {{.PostedTimeAgo}} {{.UnitPeroid}} ago <span class="post-owner">{{.Owner.DisplayName}}</span> <b>{{.Owner.Reputation}}</b></div>
+                                    <div class="post-time">asked {{.PostedTimeAgo}} {{.UnitPeroid}} ago <span class="post-owner">{{.Owner.DisplayName}}</span> <b>{{.Owner.Reputation}}</b></div>
                                 </div>
                             </td>
                         </tr>
