--- a/templates/list.html
+++ b/templates/list.html
@@ -36,7 +36,7 @@
                                     {{range .Tags}}
                                     <div class="post-tag">{{.}}</div>
                                     {{end}}
-                                    <div class="post-time">post {{.PostedTimeAgo}} {{.UnitPeroid}} ago <span class="post-owner">{{.Owner.DisplayName}}</span></div>
+                                    <div class="post-time">asked {{.PostedTimeAgo}} {{.UnitPeroid}} ago <span class="post-owner">{{.Owner.DisplayName}}</span></div>
                                 </div>
                             </td>
                         </tr>
